# FYP

./: .env  .env.example  .gitattributes  .gitignore  analytics.db  bootstrap.py  convert_svgs_to_jpeg.ps1  ieee_conference_paper.tex  main.py  mock_langgraph.py  mock_networkx.py  mock_pydantic.py  mock_sqlalchemy.py  pyproject.toml  references.bib  report.tex  report_images_guide.md  requirements-docker.txt  requirements-minimal-core.txt  requirements-minimal.txt  requirements.txt  sales.db
Video/: Screen Recording 2026-05-28 at 20.22.39.mov  Screen Recording 2026-05-28 at 20.30.25.mov
dashboards_html/: agentic_loop_dashboard.html  index.html  semantic_drift_dashboard.html
docker/: Dockerfile  Dockerfile.streamlit  docker-compose.yml  start_api.sh
docs/: DESIGN_AND_IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  PRODUCTION_GUIDE.md  QUICKSTART.md  README.md  README_PRODUCTION.md  SYSTEM_SUMMARY.md  WEEKLY_LOG.md  architecture.md  dashboard_template_agentic_loop.md  dashboard_template_semantic_drift_analysis.md  drift_metric.md  index.md  problem_statement_explanation.md  project_detailed_overview.md  project_foundation_and_architecture.md  semantic_drift_methodologies_comparison.md  synopsis.md
logs/: baselines.json  ecproject.sty  eval_results.json
report work/: Abstract.tex  ApndxA.tex  ApndxB.tex  _.latexmkrc  ecproject.sty (1)  ecproject.sty (2)  main_report.tex
src/: __init__.py  config.py  logging_config.py  main.py  types.py
tests/: conftest.py  test_agents.py  test_api.py  test_drift_metric.py  test_orchestrator.py  test_semantic_drift.py
(+26 files in other folders)
