[project]
name = "semantic-grounding-engine"
version = "0.1.0"
description = "A constraint-driven multi-agent retrieval pipeline with hybrid semantic grounding"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "langgraph",
    "fastapi",
    "streamlit",
    "sqlalchemy",
    "psycopg2-binary",
    "chromadb",
    "networkx",
    "sentence-transformers",
    "scikit-learn",
    "pydantic",
    "structlog",
    "uvicorn[standard]",
    "pytest",
    "pytest-asyncio",
    "httpx",
    "docker",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
]
requires-python = ">=3.9"
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
dev-dependencies = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
]